Name: mutators
Version: 0.0.1
Author: Dmitry Matveev
Maintainer: me@dmitrymatveev.co.uk
License: BSD3
License-file: LICENSE
Homepage: http://github.com/dmatveev/mutators
Synopsis: Automatically generate "setters" for complex data structures
Description: The Mutators package allows to generate update and
	     modify functions for data types declared with the record
	     syntax.

Build-type: Simple
cabal-version: >= 1.2

library
  build-depends: base >= 2.0, template-haskell

  Extensions: TemplateHaskell
  Exposed-modules: Data.Mutators
